--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
   --color-maincolor: #2A3647;
   --color-greyicons: #A8A8A8;
   --color-lightgrey: #D1D1D1;
+  --color-lightergrey: #E7E7E7;
   --color-darkgrey: #CDCDCD;
   --color-background: #F6F7F8;
   --color-navselected: #091931;
