--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@
 body {
   display: flex;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--color-background);
   line-height: 1.2;
 }
