--- a/styles/dlg-edit-task.css
+++ b/styles/dlg-edit-task.css
@@ -1,20 +1,3 @@
-.dlg {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  align-self: center;
-  justify-self: center;
-  font-size: 1.25rem;
-  font-weight: 400;
-  gap: 1.5rem;
-  height: 80%;
-  width: 33rem;
-  padding: 3rem 2rem;
-  border-radius: 1.875rem;
-  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.16);
-  z-index: 1000;
-}
-
 .overflow-y {
   scrollbar-width: thin;
 }
@@ -24,8 +7,7 @@
   padding: 0 0.5rem;
 }
 
-.dlg-edit__header,
-.dlg-edit__footer {
+.dlg-edit__header {
   display: flex;
   justify-content: flex-end;
 }
@@ -175,11 +157,6 @@
   margin-top: 0.5rem;
 }
 
-.dlg-edit__footer__ok-btn {
-  width: 6.5rem;
-  height: 3.5rem;
-}
-
 .dlg-edit__main__add-subtasks-box {
   margin-bottom: 0.5rem;
 }
@@ -238,4 +215,24 @@
 .dlg-edit__main__task-assignments-box input:invalid {
   border: 1px solid var(--color-lightblue);
   outline: none;
+}
+
+.dlg-edit__footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.dlg-edit__footer__discard-btn,
+.dlg-edit__footer__save-btn {
+  width: 6.5rem;
+  height: 3.5rem;
+}
+
+.dlg-edit__footer__discard-btn {
+  margin-left: 0.5rem;
+}
+
+.dlg-edit__footer__save-btn {
+  margin-right: 1rem;
 }
