--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
   --color-iconbackground: #EEEEEE;
   --color-checkboxbackground: #EDF2FA;
   --color-email: #007CEE;
+  --color-success: limegreen;
 }
 
 :root {
@@ -226,7 +227,7 @@ select {
 
 .priority-options-btn:hover {
   transform: scale(1.05);
-  box-shadow: 0px 0.375rem 0.375rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0rem 0.375rem 0.375rem rgba(0, 0, 0, 0.15);
   cursor: pointer;
 }
 
