--- a/styles/login-signup.css
+++ b/styles/login-signup.css
@@ -134,15 +134,8 @@ h1 {
     height: 3.875rem;
 }
 
-/* ######### Hover classes input borders ########### */
-
-.error {
-    border: 1px solid var(--color-error);
-}
-
-/* ################################### */
-
 .inputfield__wrapper {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -150,10 +143,27 @@ h1 {
     border-radius: 0.625rem;
     padding: 0.75rem 1.3125rem;
     width: 26.375rem;
+    transition: border-color 0.2s ease;
 }
 
 .inputfield__wrapper:focus-within {
-    border: 1px solid var(--color-lightblue);
+    border-color: var(--color-lightblue);
+}
+
+.inputfield__wrapper.error {
+    border-color: var(--color-error);
+}
+
+.inputfield__wrapper.valid-input {
+    border-color: var(--color-success);
+}
+
+.inputfield__wrapper.error:focus-within {
+    border-color: var(--color-error);
+}
+
+.inputfield__wrapper.valid-input:focus-within {
+    border-color: var(--color-success);
 }
 
 .inputfield__wrapper input {
@@ -190,6 +200,7 @@ h1 {
 }
 
 .useraccess-form__privacy-policy {
+    margin-top: 0.5rem;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -252,6 +263,8 @@ input[type="checkbox"]:checked+label:hover {
 
 .disabled {
     pointer-events: none;
+    cursor: not-allowed;
+    opacity: 0.5;
 }
 
 .signup__success-message {
@@ -281,3 +294,13 @@ input[type="checkbox"]:checked+label:hover {
 .invisible {
     visibility: hidden;
 }
+
+.confirm-password__err-warning {
+    visibility: hidden;
+    position: absolute;
+    left: 0px;
+    top: 58px;
+    font-size: 14px;
+    color: var(--color-error)
+}
+
