--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -117,6 +117,7 @@ main {
     border-bottom: 1px solid var(--color-lightgrey);
     padding: 1.0625rem 2.25rem;
     font-size: 1.25rem;
+    margin-bottom: 0.5rem;
 }
 
 .contact-list__item img {
