--- a/styles/board.css
+++ b/styles/board.css
@@ -44,6 +44,13 @@
     font-size: 1.35rem;
     width: 100%;
     height: 2rem;
+    border: none;
+    outline: none;
+    box-shadow: none;
+}
+
+.board__head__searchbox input:focus-visible {
+    border: none !important;
 }
 
 .task-search-and-add {
@@ -116,6 +123,7 @@
     flex-direction: column;
     margin-top: 1rem;
     gap: 1rem;
+    height: stretch;
 }
 
 .dlg {
