--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -33,6 +33,7 @@ main {
     flex-direction: column;
     align-items: center;
     width: 38%;
+    box-shadow: 0.25rem 0rem 0.375rem 0rem rgba(0, 0, 0, 0.08);
     min-width: 26.875rem;
     height: 100%;
     background-color: var(--color-white);
