--- a/styles/dlg-add-contact.css
+++ b/styles/dlg-add-contact.css
@@ -14,6 +14,12 @@
     background-color: var(--color-white);
     padding: 0rem;
     z-index: 1000;
+    opacity: 0;
+}
+
+.show{
+    opacity: 1;
+    transition: opacity 100ms ease-in-out;
 }
 
 .dialog-left {
