--- a/styles/dlg-add-contact.css
+++ b/styles/dlg-add-contact.css
@@ -8,18 +8,20 @@
     max-width: 93.75rem;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     z-index: 2;
     border-radius: 1.875rem;
     background-color: var(--color-white);
     padding: 0rem;
     z-index: 1000;
     opacity: 0;
+    transform: translate(200vw, -50%);
+    transition: all 300ms ease-in-out;
 }
 
-.show{
+.show {
     opacity: 1;
-    transition: opacity 100ms ease-in-out;
+    transform: translate(-50%, -50%);
+    transition: all 300ms ease-in-out;
 }
 
 .dialog-left {
