--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -25,7 +25,7 @@ section {
 }
 
 main {
-    height: 100%;
+    height: calc(100% - 6rem);
 }
 
 .contacts_page_conatiner {
@@ -37,7 +37,7 @@ main {
     flex-direction: column;
     align-items: center;
     width: 38%;
-    box-shadow: 0.25rem 0rem 0.375rem 0rem rgba(0, 0, 0, 0.08);
+    box-shadow: 0.25rem 0rem 0.75rem  0rem rgba(0, 0, 0, 0.1);
     min-width: 26.875rem;
     height: 100%;
     background-color: var(--color-white);
@@ -89,7 +89,6 @@ main {
     width: 100%;
     padding: 0rem 3.25rem;
     overflow-y: scroll;
-    padding-bottom: 6.25rem;
 }
 
 .contact-list__item {
