--- a/styles/header.css
+++ b/styles/header.css
@@ -2,11 +2,12 @@
     background-color: var(--color-white);
     color: black;
     box-shadow: 0rem 0.375rem 0.75rem rgba(0, 0, 0, 0.1);
+    z-index: 2;
 }
 
 .header span {
-  font-size: 1.25rem;
-  font-weight: 400;
+    font-size: 1.25rem;
+    font-weight: 400;
 }
 
 .header__content {
@@ -65,17 +66,15 @@
 .user-drop-down-menu {
     flex-direction: column;
     background-color: var(--color-maincolor);
-    height: 9.87rem;
-    width: 9.37rem;
+    height: fit-content;
+    width: 10.5rem;
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
-    margin-left: auto;
     border-top-left-radius: 1.25rem;
     border-bottom-left-radius: 1.25rem;
     border-bottom-right-radius: 1.25rem;
     list-style: none;
-    padding: 0;
+    padding: 0.9375rem;
     margin-right: 2rem;
     position: absolute;
     right: 0;
@@ -86,7 +85,8 @@
     color: var(--color-white);
     transition: background-color 0.3s ease;
     font-size: 1rem;
-    padding: 0.5rem;
+    padding: 0.5rem 1rem;
+    display: block;
 }
 
 .user-drop-down-menu a:hover {
