--- a/styles/login-signup.css
+++ b/styles/login-signup.css
@@ -37,8 +37,8 @@ body {
 }
 
 .header__joinlogo.start {
-    transform: translate(800px, 35vh) scale(2.7);
-    z-index: 3;
+    transform: translate(clamp(0px, 45vw, 960px), 40vh) scale(2.7);
+    z-index: 103;
 }
 
 .header__signup {
@@ -323,10 +323,21 @@ input[type="checkbox"]:checked+label:hover {
     .header__joinlogo {
         width: 64px;
         height: 78px;
+        margin-bottom: 5%;
     }
 
     .content-wrapper {
         padding: 0 1rem 0 1rem;
+    }
+
+    .header__signup {
+        display: none;
+    }
+
+    .header__signup.mobileview {
+        display: flex;
+        margin: 10% 0;
+        width: 100%;
     }
 
     .content-wrapper.header {
@@ -335,7 +346,6 @@ input[type="checkbox"]:checked+label:hover {
 
     .useraccess-form {
         padding: 32px calc(-29px + 14vw);
-        gap: 3.5rem;
     }
 
     .inputfield__wrapper {
@@ -350,10 +360,33 @@ input[type="checkbox"]:checked+label:hover {
         flex-direction: column;
         gap: 21px;
         height: fit-content;
+        margin-top: 10%;
     }
 
     .useraccess-form__privacy-policy {
-        margin-top: 20px;
+        margin-top: 30px;
+    }
+
+    .welcomescreen-mobile {
+        display: block;
+        opacity: 1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: var(--color-maincolor);
+        z-index: 100;
+        width: 100vw;
+        height: 100vh;
+        transition: all 400ms ease-in-out;
+    }
+
+    .welcomescreen-mobile.hidden {
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    .welcome-logo {
+        content: url('../assets/img/logo-white.png');
     }
 }
 
