add + fixed feat: Subtaskhandling and Assigned Userhandling in edit dlg

--- a/style.css
+++ b/style.css
@@ -150,6 +150,10 @@ input::placeholder {
   color: var(--color-lightgrey);
 }
 
+.input--validation-modifier:invalid {
+    border: 1px solid var(--color-error);
+}
+
 a {
   text-decoration: none;
 }
