--- a/styles/dlg-edit-task.css
+++ b/styles/dlg-edit-task.css
@@ -39,6 +39,13 @@
   margin-bottom: 0.5rem;
 }
 
+.error-msg {
+  color: var(--color-error);
+  font-size: 0.9rem;
+  margin-top: 0.25rem;
+  margin-left: 0.5rem;
+}
+
 .dlg-edit__main__task-priority-title.bold {
   font-weight: 700;
 }
