Refactor contacts page and enhance responsiveness
- Updated contacts.html to include new icons for adding contacts and options.
- Modified contacts.js to handle screen resizing and toggle visibility of contact details and icons based on screen size.
- Adjusted login.js to change the breakpoint for small screens from 1024px to 1025px.
- Added new SVG assets for active states of add user and options icons.

--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ input::placeholder {
 }
 
 .input--validation-modifier:invalid {
-    border: 1px solid var(--color-error);
+  border: 1px solid var(--color-error);
 }
 
 a {
@@ -297,11 +297,15 @@ select {
     font-size: 47px;
   }
 
+  h3 {
+    font-size: 36px;
+  }
+
   .filled-btn {
     font-size: 16px;
   }
 
-  .content-wrapper{
+  .content-wrapper {
     padding: 0 1rem 0 1rem;
   }
 }
