--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -80,11 +80,12 @@ a:focus-visible {
 }
 
 @media screen and (max-width: 1024px) {
-nav {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-}
+    nav {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+    }
+
     .nav-menu {
         flex: none;
         flex-direction: row;
@@ -116,7 +117,9 @@ nav {
         margin: 4px 0px;
         flex-direction: column;
         padding: 0;
-        width: auto;
+        width: 100%;
+        min-width: 70px;
+        max-width: 120px;
         border-radius: 16px;
         padding: 15px 8px;
     }
@@ -124,6 +127,11 @@ nav {
     a img {
         width: 24px;
         height: 24px;
+    }
+
+    .header {
+        position: sticky;
+        top: 0px;
     }
 
     .header__content {
