--- a/styles/dlg-add-contact.css
+++ b/styles/dlg-add-contact.css
@@ -151,3 +151,84 @@
 .filled-btn {
     gap: 0.75rem;
 }
+
+@media screen and (max-width: 1024px) {
+    .add-contact__dialog {
+        flex-direction: column;
+        min-height: max-content;
+        height: calc(500px + 20vh);
+        min-width: 325px;
+        width: 60vw;
+        max-width: 95vw;
+        max-height: 95vh;
+        transform: translate(-50%, 200vh);
+    }
+
+    .show {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+        transition: all 300ms ease-in-out;
+    }
+
+    .dialog-left {
+        padding: 1rem 16px;
+        width: 100%;
+        border-radius: 30px 30px 0px 0px;
+        height: 40%;
+    }
+
+    .dialog-left img {
+        display: none;
+    }
+
+    .content-right__wrapper {
+        justify-content: center;
+        margin-top: 60px;
+    }
+
+    .dialog-right {
+        padding: 0rem 16px;
+        width: 100%;
+        height: 60%;
+        border-radius: 0px 0px 30px 30px;
+    }
+
+    .close-button__wrapper {
+        position: fixed;
+        top: 5%;
+        right: 5%;
+    }
+
+    .close-button__wrapper img {
+        content: url('../assets/img/close-white.svg');
+    }
+
+    .close-button__wrapper img:hover {
+        content: url('../assets/img/close-white-active.svg');
+    }
+
+    .profil-img__wrapper {
+        position: absolute;
+        top: -60px;
+    }
+
+    .inputfields {
+        gap: 15px;
+    }
+
+    .filled-btn {
+        font-size: 21px;
+    }
+
+    .empty-btn {
+        display: none;
+    }
+
+    .dialog-left p {
+        font-size: 20px;
+    }
+
+    .width-div {
+        min-width: fit-content;
+    }
+}
