feat: progressbar no dynamic, user avatars also now dynamic. + function contactAssign transformed to global function. deleted IIFE.

--- a/style.css
+++ b/style.css
@@ -120,6 +120,11 @@ main {
   height: calc(100vh - 8rem);
 }
 
+.scroll-wrapper {
+  overflow-y: auto;
+  scrollbar-width: thin;
+}
+
 h1 {
   font-size: 3.75rem;
   font-weight: bold;
