--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -1,132 +1,130 @@
 .add-task__field {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.5rem;
 }
 
 .required--after::after {
-    content: "*";
-    color: var(--color-error);
+  content: "*";
+  color: var(--color-error);
 }
 
 .required--before::before {
-    content: "*";
-    color: var(--color-error);
+  content: "*";
+  color: var(--color-error);
 }
 
 .task-content__header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: 8rem;
-    gap: 1.5rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 8rem;
+  gap: 1.5rem;
 }
 
 .task-content__container {
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    margin-top: 4rem;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  margin-top: 4rem;
 }
 
 .add-task__left-column {
-    width: 50%;
-    padding-right: 1.25rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1.125rem;
+  width: 50%;
+  padding-right: 1.25rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.125rem;
 }
 
 .task-content__container label,
 .task-content__container span {
-    font-size: 1.25rem;
-    font-weight: 400;
-    margin-bottom: 0.5rem;
+  font-size: 1.25rem;
+  font-weight: 400;
+  margin-bottom: 0.5rem;
 }
 
 .task-content__container input,
 .task-content__container select {
-    width: 100%;
-    height: 2.5rem;
-    border-radius: 0.5rem;
-    border: 0.063rem solid var(--color-lightgrey);
-    padding: 0.5rem;
-    font-size: 1rem;
+  width: 100%;
+  height: 2.5rem;
+  border-radius: 0.5rem;
+  border: 0.063rem solid var(--color-lightgrey);
+  padding: 0.5rem;
+  font-size: 1rem;
 }
 
 .task-content__container textarea {
-    width: 100%;
-    min-height: 6.25rem;
-    border-radius: 0.5rem;
-    border: 1px solid var(--color-lightgrey);
-    padding: 0.5rem;
-    font-size: 1rem;
-    field-sizing: content;
+  width: 100%;
+  min-height: 6.25rem;
+  border-radius: 0.5rem;
+  border: 1px solid var(--color-lightgrey);
+  padding: 0.5rem;
+  font-size: 1rem;
+  field-sizing: content;
 }
 
 .add-task__right-column {
-    width: 50%;
-    padding-left: 1.25rem;
+  width: 50%;
+  padding-left: 1.25rem;
 }
 
 .priority-options {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    gap: 0.625rem;
-    margin-top: 0.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 0.625rem;
+  margin-top: 0.5rem;
 }
 
 .grey-seperator {
-    width: 0.125rem;
-    background-color: var(--color-lightgrey);
+  width: 0.125rem;
+  background-color: var(--color-lightgrey);
 }
 
 .task-content__footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: end;
-    gap: 1rem;
-    margin-top: 2.5rem;
-    padding-right: 6rem;
-    height: 2.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: end;
+  gap: 1rem;
+  margin-top: 2.5rem;
+  padding-right: 6rem;
+  height: 2.5rem;
 }
 
 .task-content__footer-btn {
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
 }
 
 .empty-btn {
-    border-radius: 0.625rem;
-    cursor: pointer;
-    padding: 0.625rem;
-    gap: 0.6rem;
+  border-radius: 0.625rem;
+  cursor: pointer;
+  padding: 0.625rem;
+  gap: 0.6rem;
 }
 
 .empty-btn:hover img {
-    content: url('../assets/img/close-hover.svg');
+  content: url('../assets/img/close-hover.svg');
 }
 
 .filled-btn {
-    border-radius: 0.625rem;
-    cursor: pointer;
-    padding: 0.625rem;
-    gap: 0.6rem;
+  border-radius: 0.625rem;
+  cursor: pointer;
+  padding: 0.625rem;
+  gap: 0.6rem;
 }
 
-.input--validation-modifier:invalid {
-  border: 1px solid var(--color-error);
-}
 
 input:focus-visible,
 textarea:focus-visible,
 select:focus-visible,
 button:focus-visible,
 a:focus-visible {
-  outline: none; /* entfernt Standardrahmen */
+  outline: none;
+  /* entfernt Standardrahmen */
   border: 1px solid var(--color-lightblue) !important;
 }
 
@@ -134,7 +132,7 @@ a:focus-visible {
   border: 1px solid var(--color-lightblue);
 }
 
-.subtasks__input--border-color input{
+.subtasks__input--border-color input {
   border: 1px solid var(--color-lightgrey);
 }
 
@@ -144,7 +142,8 @@ a:focus-visible {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.5); /* halbtransparentes Schwarz */
+  background: rgba(0, 0, 0, 0.5);
+  /* halbtransparentes Schwarz */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -156,7 +155,7 @@ a:focus-visible {
   border-radius: 12px;
   padding: 40px 60px;
   text-align: center;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
   animation: popIn 0.25s ease;
 }
 
@@ -187,6 +186,70 @@ a:focus-visible {
   background-color: #1f6fff;
 }
 
-.d-none {
-  display: none !important;
+.priority-options-btn {
+  width: 150px;
+}
+
+@media screen and (max-width: 1024px) {
+  body {
+    overflow: hidden;
+  }
+
+  .task-content__header {
+    margin-top: 40px;
+  }
+
+  .task-content__container {
+    flex-direction: column;
+    margin-top: 32px;
+  }
+
+  .add-task__left-column {
+    width: 100%;
+    max-width: 600px;
+    gap: 0px;
+    padding: 0;
+  }
+
+  .add-task__right-column {
+    width: 100%;
+    max-width: 600px;
+    padding-left: 0px;
+  }
+
+  #task-form {
+    height: calc(100vh - 350px);
+    overflow-y: scroll;
+  }
+
+  .task-content__footer {
+    flex-direction: column;
+    align-items: flex-start;
+    height: fit-content;
+    width: fit-content;
+    position: fixed;
+    bottom: 110px;
+  }
+
+  .task-content__footer-btn {
+    width: 90vw;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .grey-seperator {
+    display: none;
+  }
+
+  .add-task__field {
+    margin-bottom: 32px;
+  }
+
+  .empty-btn {
+    padding: 1rem;
+  }
+
+  .filled-btn {
+    padding: 1rem;
+  }
 }
