--- a/styles/header.css
+++ b/styles/header.css
@@ -98,3 +98,8 @@
     max-width: 1920px;
 }
 
+@media screen and (max-width: 1024px) {
+    .user-drop-down-menu {
+        margin-right: 1rem;
+    }
+}
