--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -147,5 +147,10 @@ a:focus-visible {
         width: 32px;
         height: 39px;
     }
+}
 
+@media screen and (max-width: 350px) {
+    .nav-menu a {
+        padding: 15px 0px;
+    }
 }
