--- a/styles/task-card.css
+++ b/styles/task-card.css
@@ -45,6 +45,7 @@
   color: var(--color-greyicons);
   font-size: 1rem;
   font-weight: 400;
+  white-space: pre-line;
 }
 
 .task__subtasks-and-progressbar-box {
