--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -97,12 +97,12 @@ a:focus-visible {
     }
 
     .nav-menu__btn-container {
-
         flex-direction: row;
         margin-top: 0;
         gap: 0;
         justify-content: space-evenly;
         width: 100%;
+        height: 100px;
     }
 
     .nav-menu__bottom__btn {
