--- a/styles/task-card.css
+++ b/styles/task-card.css
@@ -105,6 +105,7 @@
   border-radius: 50%;
   object-fit: cover;
   margin-left: -1.5rem;
+  cursor: default;
 }
 
 .task__assignments svg:first-child {
