--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -244,15 +244,24 @@ a:focus-visible {
     display: none;
   }
 
-  .add-task__field {
-    margin-bottom: 32px;
-  }
-
   .empty-btn {
     padding: 1rem;
   }
 
   .filled-btn {
     padding: 1rem;
+  }
+
+  .dlg-edit__main__assigned-user-container {
+    max-width: 100vw;
+    flex-wrap: wrap;
+  }
+
+  .dlg-edit__main__add-subtask-box {
+    margin-bottom: 24px;
+  }
+
+  #required-mobile{
+    font-size: 16px;
   }
 }
