chance background color and button color add task alert

--- a/style.css
+++ b/style.css
@@ -26,13 +26,13 @@
   --color-white: #FFFFFF;
   --color-error: #E60026;
   --color-menu: #42526E;
-  /*--color-lightblue: #29ABE2;*/
-  --color-lightblue: #007BB8;
+  --color-lightblue: #29ABE2;
+  /*--color-lightblue: #007BB8;*/
   --color-maincolor: #2A3647;
-  /*--color-greyicons: #A8A8A8;*/
-  --color-greyicons: #595959;
-  /*--color-lightgrey: #D1D1D1;*/
-  --color-lightgrey: #666666;
+  --color-greyicons: #A8A8A8;
+  /*--color-greyicons: #595959;*/
+  --color-lightgrey: #D1D1D1;
+  /*--color-lightgrey: #666666;*/
   --color-lightergrey: #E7E7E7;
   --color-darkgrey: #CDCDCD;
   --color-background: #F6F7F8;
